// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://zapier.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Zapier Makes You Happier
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://zapier.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Zapier Makes You Happier
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://zapier.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Zapier Makes You Happier
</a>
`;
